@@ -7,30 +7,22 @@ import com.daggle.animory.domain.account.entity.Account;
 import com.daggle.animory.domain.fileserver.S3FileRepository;
 import com.daggle.animory.domain.pet.dto.request.PetRegisterRequestDto;
 import com.daggle.animory.domain.pet.dto.request.PetUpdateRequestDto;
-import com.daggle.animory.domain.pet.dto.response.NewPetDto;
-import com.daggle.animory.domain.pet.dto.response.NewPetProfilesDto;
-import com.daggle.animory.domain.pet.dto.response.PetDto;
-import com.daggle.animory.domain.pet.dto.response.PetProfilesDto;
-import com.daggle.animory.domain.pet.dto.response.PetRegisterInfoDto;
-import com.daggle.animory.domain.pet.dto.response.RegisterPetSuccessDto;
-import com.daggle.animory.domain.pet.dto.response.SosPetDto;
-import com.daggle.animory.domain.pet.dto.response.SosPetProfilesDto;
-import com.daggle.animory.domain.pet.dto.response.UpdatePetSuccessDto;
+import com.daggle.animory.domain.pet.dto.response.*;
 import com.daggle.animory.domain.pet.entity.Pet;
 import com.daggle.animory.domain.pet.entity.PetPolygonProfile;
 import com.daggle.animory.domain.pet.repository.PetPolygonRepository;
 import com.daggle.animory.domain.pet.repository.PetRepository;
 import com.daggle.animory.domain.shelter.ShelterRepository;
 import com.daggle.animory.domain.shelter.entity.Shelter;
-import java.net.URL;
-import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
+
+import java.net.URL;
+import java.util.List;
 
 
 @Service
@@ -45,17 +37,17 @@ public class PetService {
 
     public PetProfilesDto getPetProfiles() {
         // sos, new 프로필 각각 최대 8개씩 조회
-        List<Pet> sosProfiles = petRepository.findProfilesWithProtectionExpirationDate(PageRequest.of(0, 8));
-        List<Pet> newProfiles = petRepository.findProfilesWithCreatedAt(PageRequest.of(0, 8));
+        final List<Pet> sosProfiles = petRepository.findProfilesWithProtectionExpirationDate(PageRequest.of(0, 8));
+        final List<Pet> newProfiles = petRepository.findProfilesWithCreatedAt(PageRequest.of(0, 8));
 
         // DTO에 넣어주기
-        List<SosPetDto> sosList = sosProfiles.stream()
+        final List<SosPetDto> sosList = sosProfiles.stream()
                 .map(SosPetDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
 
-        List<NewPetDto> newList = newProfiles.stream()
+        final List<NewPetDto> newList = newProfiles.stream()
                 .map(NewPetDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
 
         return new PetProfilesDto(sosList, newList);
     }
@@ -70,10 +62,10 @@ public class PetService {
 
     public PetDto getPetDetail(final int petId) {
         // petId로 Pet, PetPolygonProfile 얻어오기
-        Pet pet = petRepository.findById(petId)
+        final Pet pet = petRepository.findById(petId)
                 .orElseThrow(() -> new NotFound404("해당 동물이 존재하지 않습니다."));
 
-        PetPolygonProfile petPolygonProfile = petPolygonRepository.findByPetId(petId)
+        final PetPolygonProfile petPolygonProfile = petPolygonRepository.findByPetId(petId)
                 .orElseThrow(() -> new NotFound404("등록된 다각형 프로필이 존재하지 않습니다."));
 
         return PetDto.fromEntity(pet, petPolygonProfile);
@@ -85,15 +77,15 @@ public class PetService {
             final MultipartFile video) {
 
         // 이미지, 숏폼 파일 저장 후 url 얻어오기
-        URL imageUrl = fileRepository.save(image);
-        URL videoUrl = fileRepository.save(video);
+        final URL imageUrl = fileRepository.save(image);
+        final URL videoUrl = fileRepository.save(video);
 
         // 펫 등록을 요청한 유저의 보호소 조회
-        Shelter shelter = shelterRepository.findByAccountId(account.getId())
+        final Shelter shelter = shelterRepository.findByAccountId(account.getId())
                 .orElseThrow(() -> new UnAuthorized401("보호소 정보가 존재하지 않습니다."));
 
         // 펫 DB 저장
-        Pet registerPet = petRepository.save(
+        final Pet registerPet = petRepository.save(
                 petRequestDTO.toEntity(shelter, imageUrl.toString(), videoUrl.toString()));
 
         // 펫 다각형 프로필 DB 저장
@@ -108,10 +100,10 @@ public class PetService {
             final MultipartFile video) {
 
         // 펫 id로 Pet, PetPolygonProfile 얻어오기
-        Pet updatePet = petRepository.findById(petId)
+        final Pet updatePet = petRepository.findById(petId)
                 .orElseThrow(() -> new NotFound404("등록되지 않은 펫입니다."));
 
-        PetPolygonProfile petPolygonProfile = petPolygonRepository.findByPetId(petId)
+        final PetPolygonProfile petPolygonProfile = petPolygonRepository.findByPetId(petId)
                 .orElseThrow(() -> new NotFound404("등록된 다각형 프로필이 존재하지 않습니다."));
 
         // 이미지, 비디오 파일 업데이트
@@ -128,13 +120,11 @@ public class PetService {
     public void updateFile(final Pet updatePet, final MultipartFile image,
             final MultipartFile video) {
         if (image != null) {
-//            fileRepository.delete(updatePet.getProfileImageUrl());
-            URL imageUrl = fileRepository.save(image);
+            final URL imageUrl = fileRepository.save(image);
             updatePet.updateImage(imageUrl.toString());
         }
         if (video != null) {
-//            fileRepository.delete(updatePet.getProfileShortFormUrl());
-            URL videoUrl = fileRepository.save(video);
+            final URL videoUrl = fileRepository.save(video);
             updatePet.updateVideo(videoUrl.toString());
         }
     }
@@ -143,10 +133,10 @@ public class PetService {
     public PetRegisterInfoDto getRegisterInfo(final int petId) {
 
         // 펫 id로 Pet, PetPolygonProfile 얻어오기
-        Pet registerPet = petRepository.findById(petId)
+        final Pet registerPet = petRepository.findById(petId)
                 .orElseThrow(() -> new NotFound404("등록되지 않은 펫입니다."));
 
-        PetPolygonProfile petPolygonProfile = petPolygonRepository.findByPetId(petId)
+        final PetPolygonProfile petPolygonProfile = petPolygonRepository.findByPetId(petId)
                 .orElseThrow(() -> new NotFound404("등록된 다각형 프로필이 존재하지 않습니다."));
 
         // Pet -> PetRegisterInfoDto
